package NYT.NObjectClient.NProto;

import "yt/core/misc/proto/guid.proto";
import "yt/core/rpc/proto/rpc.proto";

////////////////////////////////////////////////////////////////////////////////

// Describes a transaction that must be alive in order for the request to be executed.
message TPrerequisiteTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
}

// Describes node revision that must match in order for the request to be executed.
message TPrerequisiteRevision
{
    required string path = 1;
    required NYT.NProto.TGuid transaction_id = 2;
    required uint64 revision = 3;
}

message TPrerequisitesExt
{
    extend NRpc.NProto.TRequestHeader
    {
        optional TPrerequisitesExt prerequisites_ext = 109;
    }

    repeated TPrerequisiteTransaction transactions = 1;
    repeated TPrerequisiteRevision revisions = 2;
}

message TMulticellSyncExt
{
    extend NRpc.NProto.TRequestHeader
    {
        optional TMulticellSyncExt multicell_sync_ext = 112;
    }

    repeated int32 cell_tags_to_sync_with = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetBasicAttributes
{
    message TColumns
    {
        repeated string items = 1;
    }

    optional int32 permission = 1; // EPermission
    optional TColumns columns = 2;
    optional bool omit_inaccessible_columns = 3;
    optional bool populate_security_tags = 4;
}

message TRspGetBasicAttributes
{
    message TColumns
    {
        repeated string items = 1;
    }

    message TSecurityTags
    {
        repeated string items = 1;
    }

    required NYT.NProto.TGuid object_id = 1;
    optional int32 external_cell_tag = 2;
    optional NYT.NProto.TGuid external_transaction_id = 5;
    optional TColumns omitted_inaccessible_columns = 3;
    optional TSecurityTags security_tags = 4;
}

////////////////////////////////////////////////////////////////////////////////

message TReqCheckPermission
{
    required string user = 1;
    required int32 permission = 2; // EPermission
    optional bool ignore_safe_mode = 4;

    message TColumns
    {
        repeated string items = 1;
    }
    optional TColumns columns = 3;
}

message TRspCheckPermission
{
    message TResult
    {
        required int32 action = 1; // ESecurityAction
        optional NYT.NProto.TGuid object_id = 2;
        optional string object_name = 5;
        optional NYT.NProto.TGuid subject_id = 4;
        optional string subject_name = 3;
    }

    message TColumns
    {
        repeated TResult items = 1;
    }

    required int32 action = 1; // ESecurityAction
    optional NYT.NProto.TGuid object_id = 2;
    optional string object_name = 5;
    optional NYT.NProto.TGuid subject_id = 4;
    optional string subject_name = 3;
    optional TColumns columns = 6;
}

////////////////////////////////////////////////////////////////////////////////
